* fix renaming of an entry * fix changing type of an entry * put a visible comment to entry details, that these changes are applied as you click the button
svn path=/branches/danny-web/; revision=422

--- a/www/www.reactos.org/roscms/css/cms_website.css
+++ b/www/www.reactos.org/roscms/css/cms_website.css
@@ -91,3 +91,6 @@
 .deletebutton { cursor:pointer; color:#006090; font-weight: bold; }
 
 #previewzone {background-color: white;min-height: 300px;padding-top: 10px;}
+
+/* comments */
+.comment { color: gray;font-size:smaller; }
